--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,10 @@ code {
 
 h1 {
 
-  color: black;
+  color: white;
+  word-spacing: 10%;
+  letter-spacing: 3px;
+  font-size: 3.5rem;
 }
 
 h2 {
@@ -56,4 +59,22 @@ div {
 
 .secondary {
   font-size: 2rem;
+}
+
+input {
+  color: white !important;
+}
+
+output {
+  color: white !important;
+
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: rgb(231, 222, 222);
+  text-align: center;
 }
